0.0:
      - Initial release.
0.1:
      - Lots of test code (and bug fixes).
0.2:
0.3:
      - Minor pedantic concerns about generated code.
0.4:
      - Update to work with protobuf 2.0.1.
0.5: 
      - License now included in major files.
      - Use little-endian optimizations; fix a bug therein.
      - Include 'make deb' target.
0.6:
      - Warning suppression for -Wcast-qual and -Wshadow.
      - Support for default values of all types allowed by core protobuf.
      - Generate message__init functions, for when the static initializer
        isn't convenient.
      - add some reserved fields at the end of the various descriptors
0.7:
      - memory leak:  unknown fields were not being freed by free_unpacked()
      - lowercase field names consistently when composing
        default_value names. (issue 11)
      - remove spurious semicolon (issue 10)
0.8:
      - Destroy function typedef for Services was omitting a "*"
      - service_machgen_invoke was broken. (issue 12)
      - add RPC system (BETA)
      - don't segfault when packing NULL strings and messages. (issue 13)
0.9 [NOT YET RELEASED]
      - build issue: needed $(EXEEXT) in dependency lists for cygwin