@@ -150,9 +150,20 @@ void ServiceGenerator::GenerateInit(io::Printer* printer)
 		 "}\n");
 }
 
+struct MethodIndexAndName { unsigned i; const char *name; };
+static int
+compare_method_index_and_name_by_name (const void *a, const void *b)
+{
+  const MethodIndexAndName *ma = (const MethodIndexAndName *) a;
+  const MethodIndexAndName *mb = (const MethodIndexAndName *) b;
+  return strcmp (ma->name, mb->name);
+}
+
 void ServiceGenerator::GenerateServiceDescriptor(io::Printer* printer)
 {
   int n_methods = descriptor_->method_count();
+  MethodIndexAndName *mi_array = new MethodIndexAndName[n_methods];
+  
   vars_["n_methods"] = SimpleItoa(n_methods);
   printer->Print(vars_, "static const ProtobufCMethodDescriptor $lcfullname$__method_descriptors[$n_methods$] =\n"
                        "{\n");
@@ -163,8 +174,22 @@ void ServiceGenerator::GenerateServiceDescriptor(io::Printer* printer)
     vars_["output_descriptor"] = "&" + FullNameToLower(method->output_type()->full_name()) + "__descriptor";
     printer->Print(vars_,
              "  { \"$method$\", $input_descriptor$, $output_descriptor$ },\n");
+    mi_array[i].i = i;
+    mi_array[i].name = method->name().c_str();
   }
   printer->Print(vars_, "};\n");
+
+  qsort ((void*)mi_array, n_methods, sizeof (MethodIndexAndName),
+         compare_method_index_and_name_by_name);
+  printer->Print(vars_, "const unsigned $lcfullname$__method_indices_by_name[] = {\n");
+  for (int i = 0; i < n_methods; i++) {
+    vars_["i"] = SimpleItoa(mi_array[i].i);
+    vars_["name"] = mi_array[i].name;
+    vars_["comma"] = (i + 1 < n_methods) ? "," : " ";
+    printer->Print(vars_, "  $i$$comma$        /* $name$ */\n");
+  }
+  printer->Print(vars_, "};\n");
+
   printer->Print(vars_, "const ProtobufCServiceDescriptor $lcfullname$__descriptor =\n"
                        "{\n"
 		       "  PROTOBUF_C_SERVICE_DESCRIPTOR_MAGIC,\n"
@@ -173,7 +198,8 @@ void ServiceGenerator::GenerateServiceDescriptor(io::Printer* printer)
 		       "  \"$cname$\",\n"
 		       "  \"$package$\",\n"
 		       "  $n_methods$,\n"
-		       "  $lcfullname$__method_descriptors\n"
+		       "  $lcfullname$__method_descriptors,\n"
+		       "  $lcfullname$__method_indices_by_name\n"
 		       "};\n");
 }
 
